--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,27 +1,24 @@
 .home {
-  width: 100%;
-  height: 90vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  background-color: #f8f8f8;
   border-radius: 10px;
 }
 .home-text {
-  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  margin-left: 100px;
+  width: 880px;
+  margin-top: -50px;
 }
 .title {
   font-size: 80px;
   font-weight: 600;
   color: #8e0e00;
-  text-shadow: 2px 2px 10px rgba(231, 76, 60, 0.6);
-  letter-spacing: 2px;
-  text-transform: uppercase;
+  text-shadow: 2px 2px 5px rgba(231, 76, 60, 0.6);
   transition: color 0.3s ease, text-shadow 0.3s ease;
   margin-bottom: 20px;
 }
@@ -39,7 +36,7 @@
   font-size: 18px;
   font-weight: 600;
   text-decoration: none;
-  border-radius: 5px;
+  border-radius: 17px;
   transition: background-color 0.3s ease;
 }
 .shop-now-btn:hover {
@@ -47,9 +44,9 @@
 }
 .babyImage {
   width: 550px;
-  height: 85vh;
-  margin-top: 20px;
-  margin-right: 70px;
+  height: 80vh;
+  margin-top: -7px;
+  margin-right: 50px;
   border-radius: 50%;
   box-shadow: 0 4px 20px rgba(255, 0, 0, 0.5);
 }
