--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,14 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 body {
   font-family: "Roboto", sans-serif;
+  transition: all 0.2s ease;
+  width: 90%;
+  height: auto;
+}
+body.light {
+  background-color: #fff;
+  color: #333;
+}
+body.dark {
+  background-color: #333;
+  color: #fff;
 }
