--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -11,6 +11,7 @@
   transition: all 0.3s ease-in-out;
   margin-left: -8px;
   margin-top: -8px;
+  margin-bottom: 15px;
 }
 .navbar a {
   text-decoration: none;
